<resources>
    <string name="app_name">SwipeUp_FRONTEND</string>
    <string name="text1">Sign Up with phone and Email</string>
    <string name="text2">You need a Swipe Up</string>
    <string name="text3">account to Continue</string>
    <string name="text4">Alredy have an account?</string>
    <string name="login">Log In</string>
    <string name="for_you">For You</string>
    <string name="signup">Sign Up</string>
    <string name="number">IN+91</string>
    <string name="text5">By entering your phone number you agree to our</string>
    <string name="tc">Terms of Use</string>
    <string name="and">and</string>
    <string name="privacypolicy">Privacy Policy</string>
    <string name="text6">Already have an account? Go to</string>
    <string name="signin">Sign In</string>

    //otp verification strings
    <string name="text7">Please enter the verification code we just set to</string>
    <string name="text8">your email.Did not get it?</string>
    <string name="Resendcode">Resend Code</string>
    <string name="otp">OTP Verification</string>

    //4 pages strings
    <string name="username">Please choose your nickname. Don worry, you easily change it later</string>
    <string name="pagename">What is the title of your page? It could just be your name or somthing else</string>
    <string name="birthdate">Your birthday won be shown publicaly</string>
    <string name="password">Make sure your new passwords are <b>at least eight characters long.</b>Strong password uses combination of uppercase and lowercase letters, symbols and numbers. But we do not insist on it.</string>
    <string name="chooseuser">Choose Username</string>
    <string name="choosepage">Choose Page Name</string>
    <string name="choosebirth">Choose Your Birthday</string>
    <string name="passwordset">Set Password</string>


    //home
    <string name="home">Another day, another beach, I want to leave like this forever #travel #nature #ocean</string>

    //string
    <string name="text10">Email,phone number, or username</string>
    <string name="text11">Password</string>
    <string name="text12">Sign Up</string>
    <string name="text13">Forgot Password?</string>
    <string name="text14">Reset Now</string>
    <string name="rs">Reset Password</string>


    //Reset Password
    <string name="rs1">Please enter your phone number or email so we can help you reset your password</string>
    <string name="rs2">Email or phone number</string>

    //Settings
    <string name="Settings">Settings</string>
    <string name="account">Account</string>
    <string name="s1">Manage Account</string>
    <string name="s2">Privacy</string>
    <string name="s3">Safety</string>
    <string name="s4">Wallet</string>
    <string name="s5">Analytics</string>
    <string name="s6">Share Profile</string>
    <string name="s7">Notifications</string>
    <string name="s8">Language</string>
    <string name="s9">Report a Problem</string>
    <string name="s10">Help Center
    </string>
    <string name="s11">Terms of Use</string>
    <string name="s12">Privacy Policy</string>
    <string name="s13">Copyright Policy</string>
    <string name="s14">Add Account</string>
    <string name="s15">Log Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //Settings
    <string name="Account">Account</string>
    <string name="Manage_Account">Manage Account</string>
    <string name="Privacy">Privacy</string>
    <string name="Safety">Safety</string>
    <string name="Wallet">Wallet</string>
    <string name="Analytics">Analytics</string>
    <string name="Share_Profile">Share Profile</string>
    <string name="General">General</string>
    <string name="Notifications">Notifications</string>
    <string name="Language">Language</string>
    <string name="Support">Support</string>
    <string name="Report_Problem">Report a Problem</string>
    <string name="Help">Help Center</string>
    <string name="About">About</string>
    <string name="Terms">Terms of Use</string>
    <string name="Privacy_Policy">Privacy Policy</string>
    <string name="Copyright">Copyright Policy</string>
    <string name="Add">Add Account</string>
    <string name="Log_Out">Log Out</string>
    <string name="cp">Change Profile Photo</string>

    //manage account
    <string name="ma1">Phone Number</string>
    <string name="ma2">Email Address</string>
    <string name="ma3">Password</string>
    <string name="ma4">Region</string>
    <string name="ma5">Manage Account</string>


    //Safety
    <string name="Safety1">Allow comments</string>
    <string name="Safety2">Allow duets</string>
    <string name="Safety3">Allow message</string>
    <string name="Safety4">Allow downloads</string>
    <string name="Safety5">Block List</string>


    //Notifications
    <string name="Notifications1">Interaction</string>
    <string name="Notifications2">Likes</string>
    <string name="Notifications3">Comments</string>
    <string name="Notifications4">New followers</string>
    <string name="Notifications5">Mentions</string>
    <string name="Notifications6">Message</string>
    <string name="Notifications7">Direct messages</string>
    <string name="Notifications8">Video updates</string>
    <string name="Notifications9">Video from accounts you follow</string>
    <string name="Notifications10">Video suggestions</string>
    <string name="Notifications11">Live</string>
    <string name="Notifications12">Livestreams from accounts follow</string>
    <string name="Notifications13">Recommended broadcasts</string>
    <string name="Notifications14">Other</string>
    <string name="Notifications15">Customized updates and more</string>


    //help center

    <string name="help1">Frequency Asked Question</string>
    <string name="help2">How to delete posted videous</string>
    <string name="help3">This number is already registered</string>
    <string name="help4">Messaging is no longer available</string>
    <string name="help5">I want to grow my account</string>
    <string name="help6">Select a topic</string>
    <string name="help7">Suggestion</string>
    <string name="help8">Account and Profile</string>
    <string name="help9">Feed/Search/Share</string>
    <string name="help10">Video and Sound</string>
    <string name="help11">Follow/Like/Comment</string>
    <string name="help12">Notification and Message</string>
    <string name="help13">Live/Payment/Rewards</string>
    <string name="help14">Crashing/Not Responding/Lagging/Other</string>


    //report
    <string name="report">Report</string>
    <string name="r1">Select a reason</string>
    <string name="r2">We wont let them know if you take any ot these actions. If someone is in immediate danger, call the local emergwncy services. </string>
    <string name="r3">Report account</string>
    <string name="r4">Report content</string>
    <string name="r5">Report reason: Report content</string>
    <string name="r6">Report description(Optional)</string>
    <string name="r7">Please provides as much details as possible</string>
    <string name="r8">0</string>
    <string name="r9">/200</string>

    <string name="Public">Public\n<font color='#6C7989'>Any on SwipeUp</font></string>
    <string name="Friends">Friends\n<font color='#6C7989'>Followers that you follow back</font></string>
    <string name="Private">Private\n<font color='#6C7989'>Visible to mr only</font></string>
    //descover

    <string name="ds1">Use your camara to sacn the\n code below</string>
    <string name="ds2">Mauris vel, dignissim ullamcorper\n nullam aliqiuyy et fhvft jh</string>
    <string name="ds3">Trending Stories</string>
    <string name="ds4">TrendingLive</string>
    <string name="ContentType">video/mp4</string>
    <string name="comments">

999,164 Comments
        <!--</string>-->
        <!--    <string name="username">-->

        <!--travelguru-->
        <!--</string>-->
    </string>
    <string name="creator">

Creator
</string>

    <string name="date">

2w
</string>

    <string name="commentss">
        In integer suspendisse ridiculus vulputate\ntortor egestas
</string>

    <string name="view_all_re">

View all replies (18)
</string>
    <string name="counter">

1024
</string>
    <string name="message_">

Message...
</string>


    <string name="some_id">

xyz
</string>
    <string name="title">

Scan
</string>

    <string name="point_the_c">

Point the camera at the QR code to scan
</string>

    <string name="open_my_cod">

Open My Code
</string>

    <string name="use_your_ca">

Use your camera to scan\nthe code below
</string>
    <string name="titlee">

petlover
</string>
    <string name="mauris_vel_">

Mauris vel, dignissim ullamcorper nullam aliquet et neque tortor
</string>
</resources>