<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Inbox.Notification.SettingsNotification">
    <FrameLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/back"
            android:layout_width="20dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="3dp"

            android:scaleType="centerCrop"
            app:srcCompat="@drawable/back_arrow" />

        <TextView
            android:id="@+id/textView"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:layout_centerHorizontal="true"
            android:layout_gravity="top|center"
            android:layout_marginTop="10dp"
            android:text="@string/Notifications"
            android:textColor="@color/black"
            android:textSize="18dp" />
    </FrameLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="18dp"
        android:background="@color/light_gray"
        android:layout_gravity="center"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Notifications1"
                android:layout_marginTop="36dp"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/inter_regular"
                android:textColor="@color/view_gray"
                android:textSize="14dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="56dp">
                <TextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/Notifications2"
                    android:layout_gravity="center|start"
                    android:textColor="@color/black"
                    android:textSize="15dp" />
                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="3dp"
                    android:layout_gravity="center|end"
                    android:thumb="@drawable/settings_switch_thumb"
                    app:track="@drawable/settings_switch_track"
                    />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="56dp">
                <TextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/Notifications3"
                    android:layout_gravity="center|start"
                    android:textColor="@color/black"
                    android:textSize="15dp" />
                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="3dp"
                    android:layout_gravity="center|end"
                    android:thumb="@drawable/settings_switch_thumb"
                    app:track="@drawable/settings_switch_track"
                    />
            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="56dp">
                <TextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/Notifications4"
                    android:layout_gravity="center|start"
                    android:textColor="@color/black"
                    android:textSize="15dp" />
                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="3dp"
                    android:layout_gravity="center|end"
                    android:thumb="@drawable/settings_switch_thumb"
                    app:track="@drawable/settings_switch_track"
                    />
            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="56dp">
                <TextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/Notifications5"
                    android:layout_gravity="center|start"
                    android:textColor="@color/black"
                    android:textSize="15dp" />
                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="3dp"
                    android:layout_gravity="center|end"
                    android:thumb="@drawable/settings_switch_thumb"
                    app:track="@drawable/settings_switch_track"
                    />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Notifications6"
                android:layout_marginTop="28dp"
                android:layout_marginBottom="12dp"
                android:textColor="@color/view_gray"
                android:textSize="14dp" />
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="56dp">
                <TextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/Notifications7"
                    android:layout_gravity="center|start"
                    android:textColor="@color/black"
                    android:textSize="15dp" />
                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="3dp"
                    android:layout_gravity="center|end"
                    android:thumb="@drawable/settings_switch_thumb"
                    app:track="@drawable/settings_switch_track"
                    />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Notifications8"
                android:layout_marginTop="28dp"
                android:layout_marginBottom="12dp"
                android:textColor="@color/view_gray"
                android:textSize="14dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="56dp">
                <TextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/Notifications9"
                    android:layout_gravity="center|start"
                    android:textColor="@color/black"
                    android:textSize="15dp" />
                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="3dp"
                    android:layout_gravity="center|end"
                    android:thumb="@drawable/settings_switch_thumb"
                    app:track="@drawable/settings_switch_track"
                    />

            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="56dp">
                <TextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/Notifications10"
                    android:layout_gravity="center|start"
                    android:textColor="@color/black"
                    android:textSize="15dp" />
                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="3dp"
                    android:layout_gravity="center|end"
                    android:thumb="@drawable/settings_switch_thumb"
                    app:track="@drawable/settings_switch_track"
                    />
            </FrameLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Notifications11"
                android:fontFamily="@font/inter_regular"
                android:layout_marginTop="28dp"
                android:layout_marginBottom="12dp"
                android:textColor="@color/view_gray"
                android:textSize="14dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="56dp">
                <TextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/Notifications12"
                    android:layout_gravity="center|start"
                    android:textColor="@color/black"
                    android:textSize="15dp" />
                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="3dp"
                    android:layout_gravity="center|end"
                    android:thumb="@drawable/settings_switch_thumb"
                    app:track="@drawable/settings_switch_track"
                    />

            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="56dp">
                <TextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/Notifications13"
                    android:layout_gravity="center|start"
                    android:textColor="@color/black"
                    android:textSize="15dp" />
                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="3dp"
                    android:layout_gravity="center|end"
                    android:thumb="@drawable/settings_switch_thumb"
                    app:track="@drawable/settings_switch_track"
                    />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Notifications14"
                android:layout_marginTop="28dp"
                android:layout_marginBottom="12dp"
                android:textColor="@color/view_gray"
                android:textSize="14dp" />
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="56dp">
                <TextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/Notifications15"
                    android:layout_gravity="center|start"
                    android:textColor="@color/black"
                    android:textSize="15dp" />
                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="3dp"
                    android:layout_gravity="center|end"
                    android:thumb="@drawable/settings_switch_thumb"
                    app:track="@drawable/settings_switch_track"
                    />

            </FrameLayout>

            <View
                android:layout_width="148dp"
                android:layout_height="5dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="40dp"
                android:background="@color/light_gray"
                android:layout_gravity="center"/>


        </LinearLayout>
    </ScrollView>

</LinearLayout>