<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Safety">

    <FrameLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/back"
            android:layout_width="20dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="3dp"

            android:scaleType="centerCrop"
            app:srcCompat="@drawable/back_arrow" />

        <TextView
            android:id="@+id/textView"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:layout_centerHorizontal="true"
            android:layout_gravity="top|center"
            android:layout_marginTop="10dp"
            android:text="@string/Safety"
            android:textColor="@color/black"
            android:textSize="18dp" />
    </FrameLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="18dp"
        android:background="@color/light_gray"
        android:layout_gravity="center"/>


    <FrameLayout
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_height="56dp">
        <TextView
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:text="@string/Safety1"
            android:layout_gravity="center|start"
            android:textColor="@color/black"
            android:textSize="15dp" />
        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="3dp"
            android:layout_gravity="center|end"
            android:thumb="@drawable/settings_switch_thumb"
            app:track="@drawable/settings_switch_track"
            />



    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_height="56dp">
        <TextView
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:text="@string/Safety2"
            android:layout_gravity="center|start"
            android:textColor="@color/black"
            android:textSize="15dp" />
        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="3dp"
            android:layout_gravity="center|end"
            android:thumb="@drawable/settings_switch_thumb"
            app:track="@drawable/settings_switch_track"
            />


    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_height="56dp">
        <TextView
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:text="@string/Safety3"
            android:layout_gravity="center|start"
            android:textColor="@color/black"
            android:textSize="15dp" />
        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="3dp"
            android:layout_gravity="center|end"
            android:thumb="@drawable/settings_switch_thumb"
            app:track="@drawable/settings_switch_track"
            />


    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_height="56dp">
        <TextView
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:text="@string/Safety4"
            android:layout_gravity="center|start"
            android:textColor="@color/black"
            android:textSize="15dp" />
        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="3dp"
            android:layout_gravity="center|end"
            android:thumb="@drawable/settings_switch_thumb"
            app:track="@drawable/settings_switch_track"
            />


    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_height="56dp">
        <TextView
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:text="@string/Safety5"
            android:layout_gravity="center|start"
            android:textColor="@color/black"
            android:textSize="15dp" />


    </FrameLayout>
</LinearLayout>